Started project with a first working WebSocketServer

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif32
 board = heltec_wifi_kit_32
 framework = arduino
+monitor_speed = 115200
+upload_protocol = esptool
+lib_deps = 
+	ottowinter/ESPAsyncWebServer-esphome@^2.0.1
+	bblanchon/ArduinoJson@^6.18.5
