--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ upload_protocol = esptool
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^2.0.1
 	bblanchon/ArduinoJson@^6.18.5
+	bogde/HX711@^0.7.4
