--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,14 @@ lib_deps =
 	ottowinter/ESPAsyncWebServer-esphome@^2.0.1
 	bblanchon/ArduinoJson@^6.18.5
 	bogde/HX711@^0.7.4
+
+[env:LOLIN32]
+platform = espressif32
+board = lolin32
+framework = arduino
+monitor_speed = 115200
+upload_protocol = esptool
+lib_deps = 
+	ottowinter/ESPAsyncWebServer-esphome@^2.0.1
+	bblanchon/ArduinoJson@^6.18.5
+	bogde/HX711@^0.7.4
