Added H711 lip directly to Project to solve problem with library

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,7 +36,9 @@ board = lolin32_lite
 framework = arduino
 monitor_speed = 115200
 upload_protocol = esptool
+monitor_filters = esp32_exception_decoder
+
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^2.0.1
 	bblanchon/ArduinoJson@^6.18.5
-	bogde/HX711@^0.7.4
+	
