--- a/platformio.ini
+++ b/platformio.ini
@@ -41,4 +41,5 @@ monitor_filters = esp32_exception_decoder
 lib_deps = 
 	ottowinter/ESPAsyncWebServer-esphome@^2.0.1
 	bblanchon/ArduinoJson@^6.18.5
+	bogde/HX711@^0.7.4
 	
